Fixing layout bugs in buttons

--- a/src/app/features/math/compound-interest/compound-interest.component.css
+++ b/src/app/features/math/compound-interest/compound-interest.component.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     padding-bottom: 1%;
     font-size: 3ch;
+    border-radius: 6px;
 }
 
 div.card-title > h1 {
@@ -56,8 +57,6 @@ div.card-title > h1 {
 .input-container input {
     width: 50%;
 }
-}
-
 
 .calculate-button {
     margin: 2%;
@@ -71,6 +70,31 @@ div.card-title > h1 {
     border-color: #47525E;
     font-size: large;
 }
+
+}
+@media (max-width: 1000px){
+form button {
+    width: 85%;
+    height: 1.2cm;
+    background-color: #47525E;
+    color: white;
+    border-radius: 7px;
+    border-color: #47525E;
+    font-size: large;
+}
+
+#div-explanation-button button{
+    margin-left: 15%;
+    margin-top: 1%;
+    background-color: white;
+    border-radius: 7px;
+    font-size: large;
+    width: 70%;
+    height: 1.2cm;
+    border-color: #47525E;
+}
+}
+
 
 .explanation-card {
     background-color: white;
@@ -86,7 +110,7 @@ div.card-title > h1 {
 
 .explanation-card h2 {
     font-size: 1.2em;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
 } 
 
 
